--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: white;
+}
+
 nav {
     height: 2.5rem;
     background-color: black;
